# ondevice-quantized-slm

./: .gitignore  README.md  pyproject.toml
api/: main.py
data/: data_card.md  data_sources.md
docs/: 01_business_requirements.md  02_feasibility_study.md  03_methodology.md  04_evaluation.md  05_research_paper.md
mlops/: ci.yml  mlflow_config.yaml  model_card.md
notebooks/: 01_eda.ipynb  02_features.ipynb  03_model.ipynb  04_eval.ipynb
src/slm_quant/: __init__.py  data.py  features.py  models.py  serve.py
tests/: test_smoke.py
ui/: package.json
ui/app/: globals.css  layout.tsx  page.tsx
