[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-quant"
version = "0.1.0"
description = "On-Device Quantized SLM Summarization — Pareto evaluation harness"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn>=1.4",
  "networkx",
  "matplotlib",
  "seaborn",
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "joblib",
  "pyarrow",
  "nltk",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff",
  "jupyterlab",
  "nbformat",
  "mlflow",
]

[tool.setuptools.packages.find]
where = ["src"]
